objects/CS_Stakeholders__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting Source object ,Target Object and fields for stakeholder record creation on Stakeholders object</description>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <label>Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalationDays__c</fullName>
        <label>Escalation Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CS_Stakeholders</label>
    <listViews>
        <fullName>CS_Stakeholders</fullName>
        <columns>NAME</columns>
        <columns>EscalationDays__c</columns>
        <columns>ObjectName__c</columns>
        <columns>Role__c</columns>
        <columns>EmailTemplate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>CS_Stakeholders</label>
        <language>en_US</language>
    </listViews>
</CustomObject>